<resources>
    <string name="app_name">HealthAppFront</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="logo_description">Логотип приложения</string>
    <string name="button_login">Войти</string>
    <string name="button_registration">Зарегистрироваться</string>
    <string name="hint_firstName">Введите имя</string>
    <string name="hint_email">Введите почту</string>
    <string name="hint_password">Введите пароль</string>
    <string name="avatar">avatar</string>
    <string name="createRecord">Создать запись</string>
    <string name="delete_record">Удалить запись</string>
    <string name="check_note">Посмотреть примечание</string>
    <string name="update_record">Изменить запись</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_email">email@mail.ru</string>
    <string name="records_by_date">Записи за :</string>
    <string name="get_report">Создать отчёт</string>
    <string name="Report">Отчёт</string>
    <string name="orderSet">Параметры отчёта</string>
    <string name="FromDate">Дата от:</string>
    <string name="choseFromDate">Выбрать дату начала</string>
    <string name="ToDate">Дата до:</string>
    <string name="ChoseToDate">Выбрать дату конца</string>
    <string name="ChoseMetricTypeTitle">Выберите тип метрик</string>
    <string name="GenerateReport">📋 Сформировать отчёт</string>
    <string name="Results">Результаты:</string>
    <string name="exportExcel">📎 Excel</string>
    <string name="SendEmail">📧 Отправить</string>
    <string name="Nav_Contacts">Контакты</string>
    <string name="Nav_Profile">Профиль</string>
    <string name="Nav_Settings">Настройки</string>
    <string name="Nav_Logout">Выход</string>
    <string name="Create_Family">Создать Семью</string>
    <string name="send_secret_code">Вступить в семью</string>
    <string name="Nav_family">Семья</string>
    <string name="inviteMember">Добавить</string>
    <string name="add_virtual">Добавить виртуального</string>
    <string name="remove_member">Удалить участника</string>
    <string name="inspect_member">Просмотр пользователя</string>
    <string name="member_name">👥 Участник:</string>
    <string name="add_record_to_member">Добавить запись участнику</string>
    <string name="_000000">000000</string>
    <string name="confirm">Подтвердить</string>
    <string name="code_message">Мы отправили 6-значный код на вашу почту</string>
    <string name="email_confirm">Подтверждение почты</string>
    <string name="descr_logo">Логотип</string>
    <string name="under_logo_text">Ваш личный дневник здоровья</string>
    <string name="name">Имя</string>
    <string name="bottom_text">Войдите или создайте аккаунт, чтобы начать</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="role">Роль</string>
    <string name="pass_hint">Пароль</string>
    <string name="email_hint">Email</string>
    <string-array name="account_role">
        <item>Пользователь</item>
        <item>Доктор</item>
    </string-array>

</resources>