<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:gravity="center" />

    <ImageButton
        android:id="@+id/btn_note"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/check_note"
        android:src="@android:drawable/ic_menu_info_details"
        android:background="?attr/selectableItemBackground"/>

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/update_record"
        android:src="@android:drawable/ic_menu_edit"
        android:background="?attr/selectableItemBackground"/>


    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/delete_record"
        android:src="@android:drawable/ic_menu_delete"
        android:background="?attr/selectableItemBackground"/>

</LinearLayout>